--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
+<!DOCTYPE html>
 <html>
+  <meta charset="UTF-8">
+  <link href="styles/main.css" rel="stylesheet" type="text/css" />
   <head>
-    <title>My blog</title>
-  <body>
+    <div class="topnav">
+      <a class="active" href="index.html">Home</a>
+      <a href="blog/sprint1-technical.html">Sprint 1</a>
+    </div>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <title>Danny's Blog</title>
+  <div>
+    <img src="/images/wellington.jpg" style="width:100%">
+    <body>
     <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
+    <p> I'm Danny and this is the homepage of my blog!</p>
     <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+    </body>
+  </div>
 </html>
