--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta charset="UTF-8">
-  <link href="styles/main.css" rel="stylesheet" type="text/css" />
+  <link href="styles/index.css" rel="stylesheet" type="text/css" />
   <head>
     <div class="topnav">
       <a class="active" href="index.html">Home</a>
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Danny's Blog</title>
   <div>
-    <img src="/images/wellington.jpg" style="width:105%">
+    <img src="/images/wellington.jpg" style="width:100%">
     <body>
     <h1>Kia ora Taiao! (Hello World!)</h1> 
     <p> I'm Danny and this is the homepage of my blog!</p>
