--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="styles/index.css" rel="stylesheet" type="text/css" />
   <head>
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
+      <a class="active" href="https://daniel-bridewell.github.io">Home</a>
       <a href="blog/sprint1-technical.html">Sprint 1</a>
     </div>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
