--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div class="topnav">
       <a class="active" href="https://daniel-bridewell.github.io">Home</a>
       <a href="blog/sprint1-technical.html">Sprint 1</a>
+      <a href="blog/sprint2-technical.html">Sprint 2</a>
     </div>
     
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -16,7 +17,7 @@
     <body>
     <h1>Kia ora Taiao! (Hello World!)</h1> 
     <p> I'm Danny and this is the homepage of my blog!</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <p> There's not really much here, but there's a link to everything in the navigation bar above! </p>
     </body>
   </div>
 </html>
