--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <div class="topnav">
       <a class="active" href="https://daniel-bridewell.github.io">Home</a>
-      <a href="blog/sprint1-technical.html">Sprint 1</a>
-      <a href="blog/sprint2-technical.html">Sprint 2</a>
+      <a href="https://daniel-bridewell.github.io/blog/sprint1-technical.html">Sprint 1</a>
+      <a href="https://daniel-bridewell.github.io/blog/sprint2-technical.html">Sprint 2</a>
     </div>
     
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
