--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <a class="active" href="https://daniel-bridewell.github.io">Home</a>
       <a href="https://daniel-bridewell.github.io/blog/sprint1-technical.html">Sprint 1</a>
       <a href="https://daniel-bridewell.github.io/blog/sprint2-technical.html">Sprint 2</a>
+      <a href="https://daniel-bridewell.github.io/blog/sprint1-cultural.html">Identity & Values</a>
+      <a href="https://daniel-bridewell.github.io/blog/sprint2-cultural.html">Learning Plan</a>
     </div>
     
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
