--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="https://daniel-bridewell.github.io/blog/sprint1-cultural.html">Identity & Values</a>
       <a href="https://daniel-bridewell.github.io/blog/sprint2-cultural.html">Learning Plan</a>
       <a href="https://daniel-bridewell.github.io/blog/sprint3-cultural.html">EQ</a>
+      <a href="https://daniel-bridewell.github.io/blog/sprint3-technical.html">Sprint 3</a>
     </div>
     
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
